# Snakie

./: .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  robot.yml  snakie-robot-workflow.html  snakie-robot-workflow.md  snakie-robot-workflow.mmd  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite-plugin-standard-parts.ts  vite.preview.config.mjs  vite.web.config.ts  vitest.config.ts
design_handoff_snakie_soft_shell/: README.md  Snakie Soft Shell.dc.html  Snakie Workspaces.dc.html
docs/: board.md  build-plan.md  circuit-sim-epic.md  common-parts.md  epic.md  feedback.md  hardware-test-plan.md  instruments-library.md  krf.md  linting.md  macos-signing.md  micropython-boards.csv  micropython-boards.md  part-editor.md  parts-library-epic.md  parts-library.md  plugin-system.md  robot-definition.md  web-build.md  web-serial-classroom-policy.md  writing-plugins.md
examples/: bme280-1.py  bme280_demo.py  board_test.py  board_view_test.py  bt_scan_demo.py  burgerbot.py  buzzer_demo.py  demo-arm.urdf  display_demo.py  hello_world.py  i2c_detect_demo.py  i2c_test.py  icm20948.py  imu_test.py  instruments_demo.py  potentiometer_demo.py  (+11 more)
python/: README.md  pyproject.toml
python/snakie/: __init__.py  host.py
python/tests/: test_ik.py  test_instruments.py  test_modules.py  test_motion.py  test_motion_read.py  test_python_linter.py  test_servo_driver.py  test_snakie_umbrella.py
python/tests/fixtures/: arm_skeleton.json
(+811 files in other folders)
